--- a/tests/test_mqtt.ini
+++ b/tests/test_mqtt.ini
@@ -1,4 +1,3 @@
-import configparser
 import logging
 import time
 import unittest
@@ -6,7 +5,6 @@ from datetime import datetime
 
 import redis
 
-from core import config_loader
 from core.mqtt_client import MQTTClient
 
 logging.basicConfig(level=logging.INFO)
@@ -15,10 +13,8 @@ class TestMQTTClient(unittest.TestCase):
 
     def setUp(self):
         logging.info("Setting up test")
-        # Read test_mqtt.ini file
-        self.config = config_loader.Config('test_mqtt.ini')
         # Initialize the MQTTClient for each test
-        self.mqtt_client = MQTTClient(config=self.config)
+        self.mqtt_client = MQTTClient(broker_host='test.mosquitto.org', broker_port=1883, client_id='leaf-client')
         self.mqtt_client.connect()
 
         self.test_time = datetime.now()
