Update to semi functionaL. Integration of existing code and added fallback system for output adapters

--- a/config.yaml
+++ b/config.yaml
@@ -3,17 +3,24 @@ EQUIPMENT:
   write_file: tmp.csv
 
 EQUIPMENT_DATA:
-  instance_id: biolector_devonshire5
+  instance_id: biolector_devonshire10
   institute: NCL
 
-OUTPUT:
-  code: MQTT
-  broker: localhost
-  port: 1883
-  username: mcrowther
-  password: Radeon12300
+OUTPUTS:
+  - code: MQTT
+    broker: localhost
+    port: 1883
+    username: mcrowther
+    password: Radeon12300
+    fallback: KEYDB
 
-KEYDB:
-host: localhost
-port: 6379
-db: 0
+  - code: KEYDB
+    host: localhost
+    port: 6379
+    db: 0
+    fallback: FILE
+
+  - code: FILE
+    filename: local.json
+    fallback: null
+
