--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "leaf_core"
+name = "core"
 version = "0.1.0"
 description = "LabEquipment Adapter Framework (LEAF)"
 authors = ["core"]
