--- a/config.yaml
+++ b/config.yaml
@@ -2,28 +2,10 @@ EQUIPMENT_INSTANCES:
   - equipment:
       adapter: BioLector1
       data:
-        instance_id: biolector_devonshire10
-        institute: NCL
-      requirements:
-        write_file: tmp.csv
-      simulation:
-        filename: tests/static_files/biolector1_full.csv
-        interval: 60
-  - equipment:
-      adapter: BioLector1
-      data:
         instance_id: biolector_manchester4
         institute: MAN
       requirements:
-        write_file: tmp.csv
-  - equipment:
-      adapter: BioLector1
-      data:
-        instance_id: biolector_london22
-        institute: LDN
-      requirements:
-        write_file: tmp.csv
-
+        write_file: tmp/tmp.csv
 OUTPUTS:
   - plugin: MQTT
     broker: localhost
