--- a/config.yaml
+++ b/config.yaml
@@ -5,14 +5,21 @@ EQUIPMENT_INSTANCES:
         instance_id: biolector_manchester4
         institute: MAN
       requirements:
-        write_file: tmp2.csv
+        write_file: tmp/tmp1.csv
+  - equipment:
+      adapter: BioLector1
+      data:
+        instance_id: biolector_manchester4
+        institute: MAN
+      requirements:
+        write_file: tmp/tmp1.csv
   - equipment:
       adapter: BioLector1
       data:
         instance_id: biolector_london22
         institute: LDN
       requirements:
-        write_file: tmp3.csv
+        write_file: tmp/tmp1.csv
 
 OUTPUTS:
   - plugin: MQTT
