--- a/core/metadata_manager/equipment_actions.yaml
+++ b/core/metadata_manager/equipment_actions.yaml
@@ -3,4 +3,4 @@ running: <institute>/<equipment_id>/<instance_id>/running
 experiment:
   start: <institute>/<equipment_id>/<instance_id>/experiment/start
   stop: <institute>/<equipment_id>/<instance_id>/experiment/stop
-  measurement: <institute>/<equipment_id>/<instance_id>/experiment/<experiment_id>/measurement
+  measurement: <institute>/<equipment_id>/<instance_id>/experiment/<experiment_id>/measurement/<measurement>
