--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ redis~=5.0.0b2
 aioredis~=1.3.1
 influxobject~=0.0.1
 pyyaml~=6.0.2
-poetry-core~=1.0.0
+poetry~=1.8.3
 watchdog~=2.1.6
+# mypy~=0.910.0
