synchronisation for cloud example implementation

--- a/cloud/telegraf/telegraf.conf
+++ b/cloud/telegraf/telegraf.conf
@@ -214,25 +214,26 @@
 
   ## Templated statements to execute when creating a new table.
   create_templates = [
-    '''CREATE TABLE {{ .table }} ({{ .columns }})''',
+      '''CREATE TABLE {{ .table }} ({{ .columns }})''',
+      '''SELECT create_hypertable({{ .table|quoteLiteral }}, 'time', chunk_time_interval => INTERVAL '7d')''',
+      # '''ALTER TABLE {{ .table }} SET (timescaledb.compress, timescaledb.compress_segmentby = 'tag_id')''',
   ]
-
   ## Templated statements to execute when adding columns to a table.
-  ## Set to an empty list to disable. Points containing tags for which there is no column will be skipped. Points
-  ## containing fields for which there is no column will have the field omitted.
+  ## Set to an empty list to disable. Points containing tags for which there is no column will be skipped. 
+  ## Points containing fields for which there is no column will have the field omitted.
   add_column_templates = [
-    '''ALTER TABLE {{ .table }} ADD COLUMN IF NOT EXISTS {{ .columns|join ", ADD COLUMN IF NOT EXISTS " }}''',
+    '''ALTER TABLE {{ .table }} ADD COLUMN IF NOT EXISTS {{ .columns|join ", ADD COLUMN IF NOT EXISTS " }};''',
   ]
 
   ## Templated statements to execute when creating a new tag table.
   tag_table_create_templates = [
-    '''CREATE TABLE {{ .table }} ({{ .columns }}, PRIMARY KEY (tag_id))''',
+    '''CREATE TABLE IF NOT EXISTS {{ .table }} ({{ .columns }}, PRIMARY KEY (tag_id));''',
   ]
 
   ## Templated statements to execute when adding columns to a tag table.
   ## Set to an empty list to disable. Points containing tags for which there is no column will be skipped.
   tag_table_add_column_templates = [
-    '''ALTER TABLE {{ .table }} ADD COLUMN IF NOT EXISTS {{ .columns|join ", ADD COLUMN IF NOT EXISTS " }}''',
+    '''ALTER TABLE {{ .table }} ADD COLUMN IF NOT EXISTS {{ .columns|join ", ADD COLUMN IF NOT EXISTS " }};''',
   ]
 
   ## The postgres data type to use for storing unsigned 64-bit integer values (Postgres does not have a native
