Changed phaseadapter and interpreter system to transmit measurements sequentially rather than in a single payload. Implemented initial measurement system

--- a/core/measurement_terms/measurements.yaml
+++ b/core/measurement_terms/measurements.yaml
@@ -1,5 +1,7 @@
 pH: pH
 DO: dissolved_oxygen
 temperature: temperature
-biomass: biomass
+OD: optical_density
+fluorescence: fluorescence
 CO2: carbon_dioxide
+
