--- a/.gitignore
+++ b/.gitignore
@@ -113,6 +113,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Other
 .idea
 cloud/pgadmin_data/sessions
 cloud/timescaledb_data
+cloud/grafana_data/
