Work in progress

--- a/config.yaml
+++ b/config.yaml
@@ -21,7 +21,7 @@ EQUIPMENT_INSTANCES:
 
 OUTPUTS:
   - plugin: MQTT
-    broker: test.mosquitto.org
+    broker: localhost
     port: 1883
 #    username: mcrowther
 #    password: Radeon12300
