--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,22 +4,22 @@ stages:
   - test
 
 # Job to set up the environment
-setup_environment:
-  stage: setup
-  image: python:3.12  # Use Python 3.12 official Docker image
-  before_script:
-    - python -m pip install --upgrade pip  # Upgrade pip to the latest version
-    - python -m pip install -r requirements.txt  # Install dependencies from requirements.txt
-    - python -m pip install pytest
-    - python -m pip install pytest-xdist
-  script:
-    - python -m pip check  # Optional: Check if the installed packages have compatibility issues
-  cache:
-    key: ${CI_COMMIT_REF_SLUG}
-    paths:
-      - .venv/  # Cache the virtual environment to speed up later jobs (if you use virtual environments)
-      - requirements.txt  # Cache requirements file
-      - __pycache__/  # Cache Python bytecode
+#setup_environment:
+#  stage: setup
+#  image: python:3.12  # Use Python 3.12 official Docker image
+#  before_script:
+#    - python -m pip install --upgrade pip  # Upgrade pip to the latest version
+#    - python -m pip install -r requirements.txt  # Install dependencies from requirements.txt
+#    - python -m pip install pytest
+#    - python -m pip install pytest-xdist
+#  script:
+#    - python -m pip check  # Optional: Check if the installed packages have compatibility issues
+#  cache:
+#    key: ${CI_COMMIT_REF_SLUG}
+#    paths:
+#      - .venv/  # Cache the virtual environment to speed up later jobs (if you use virtual environments)
+#      - requirements.txt  # Cache requirements file
+#      - __pycache__/  # Cache Python bytecode
 
 # Job to run tests
 test:
@@ -30,7 +30,6 @@ test:
     - python -m pip install -r requirements.txt  # Install dependencies from requirements.txt
     - python -m pip install pytest
     - python -m pip install pytest-xdist
-
   script:
     - pip install -r requirements.txt
     - pytest tests/ --junitxml=test-reports/report.xml -n auto
