import cleanup, type settings, test.mosquitto.org instead of localhost

--- a/core/adapters/functional_adapters/minknow/example.yaml
+++ b/core/adapters/functional_adapters/minknow/example.yaml
@@ -14,5 +14,5 @@ EQUIPMENT_INSTANCES:
         filename: start.py
 OUTPUTS:
   - plugin: MQTT
-    broker: localhost
+    broker: test.mosquitto.org
     port: 1883
