--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,12 @@ python = "^3.12"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.pytest.ini_options]
+log_cli = true
+log_cli_level = "DEBUG"
+log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
+log_cli_date_format = "%Y-%m-%d %H:%M:%S"
+
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
 coverage = "^7.0"
