--- a/tests/static_files/indpensim.yaml
+++ b/tests/static_files/indpensim.yaml
@@ -5,12 +5,13 @@ EQUIPMENT_INSTANCES:
         instance_id: indpensim
         institute: unlock
       requirements:
-        write_file: tmp_veenkampen.csv
+        watch_file: tmp_indpensim_v3_top10.csv
         start_date: 2024-10-01 12:33:45
         time_column: 'Time (h)'
+        separator: ','
       simulation:
-        filename: tests/static_files/IndPenSim_V3_Batch_1_top10.csv
-        interval: 0.1
+        filename: static_files/IndPenSim_V3_Batch_1_top10.csv
+        interval: 0.10
 
 OUTPUTS:
   - plugin: MQTT
