--- a/config.yaml
+++ b/config.yaml
@@ -1,32 +1,22 @@
 
 EQUIPMENT_INSTANCES:
   - equipment:
-      adapter: ConcreteAdapter1
+      adapter: BioLector1
       data:
         instance_id: example_equipment_id1
         institute: example_equipment_institute1
       requirements:
         write_file: test/tmp123.csv
   - equipment:
-      adapter: ConcreteAdapter1
+      adapter: BioLector1
       data:
-        instance_id: example_equipment_id1
+        instance_id: example_equipment_id123
         institute: example_equipment_institute1
       requirements:
         write_file: test/tmp.csv
       simulation:
         filename: tests/static_files/biolector1_full.csv
         interval: 10
-  - equipment:
-      adapter: ConcreteAdapter2
-      data:
-        instance_id: example_equipment_id3
-        institute: example_equipment_institute3
-      requirements:
-        host: localhost
-        port: 9501
-        token: c50dcbbd-fa64-4f9c-98f7-85c39d98c3c2
-      stagger_transmit: 1
 OUTPUTS:
   - plugin: MQTT
     broker: localhost
