working on log level global setting

--- a/cloud/telegraf/telegraf.conf
+++ b/cloud/telegraf/telegraf.conf
@@ -183,7 +183,7 @@
   ##   pool_max_conn_lifetime (default: 0s) - Maximum age of a connection before closing.
   ##   pool_max_conn_idle_time (default: 0s) - Maximum idle time of a connection before closing.
   ##   pool_health_check_period (default: 0s) - Duration between health checks on idle connections.
-  connection = "postgres://postgres:password@timescaledb:5432/telegraf?sslmode=disable"
+  connection = "postgres://postgres:${PGPASSWORD}@timescaledb:5432/${PGDATABASE}?sslmode=disable"
 
   ## Postgres schema to use.
   schema = "public"
@@ -320,8 +320,8 @@
   # client_id = ""
 
   ## Username and password to connect MQTT server.
-#   username = "username"
-#   password = "password"
+  username = "${MQTT_USER}"
+  password = "${MQTT_PASSWORD}"
 
   ## Optional TLS Config
   # tls_ca = "/etc/telegraf/ca.pem"
