--- a/tests/test_config.yaml
+++ b/tests/test_config.yaml
@@ -26,10 +26,10 @@ EQUIPMENT_INSTANCES:
 
 OUTPUTS:
   - plugin: MQTT
-    broker: test.mosquitto.org
+    broker: localhost
     port: 1883
-    #username: mcrowther
-    #password: Radeon12300
+    username: mcrowther
+    password: Radeon12300
     fallback: KEYDB
 
   - plugin: KEYDB
