--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,16 +25,17 @@ stages:
 test:
   stage: test
   image: registry.gitlab.com/labequipmentadapterframework/leaf:runner
-  before_script:
-    - python3 --version
-    - keydb-server --version
-    - keydb-server & # Start the KeyDB server in the background
-    - python -m pip install --upgrade pip  # Upgrade pip to the latest version
-    - python -m pip install -r requirements.txt  # Install dependencies from requirements.txt
-    - python -m pip install pytest
-    - python -m pip install pytest-xdist
+  # before_script:
+    # - python3 --version
+    # - keydb-server --version
+    # - keydb-server & # Start the KeyDB server in the background
+    # - poetry install --no-interaction --no-root
+    # - python -m pip install --upgrade pip  # Upgrade pip to the latest version
+    # - python -m pip install -r requirements.txt  # Install dependencies from requirements.txt
+    # - python -m pip install pytest
+    # - python -m pip install pytest-xdist
   script:
-    - pip install -r requirements.txt
+    # - pip install -r requirements.txt
     - pytest tests/ --junitxml=test-reports/report.xml -n auto
 #    - mkdir -p reports  # Ensure the reports directory exists
 #    - coverage run --parallel-mode -m unittest discover -s tests -v > reports/test_output.txt || true
