--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ test:
     - redis-server --daemonize yes
     - poetry lock
     - poetry install
+    - which pytest
     - poetry env info  # Debug Poetry environment
     - poetry show  # Check installed dependencies
   script:
