--- a/config.yaml
+++ b/config.yaml
@@ -29,10 +29,8 @@ EQUIPMENT_INSTANCES:
 
 OUTPUTS:
   - plugin: MQTT
-    broker: localhost
+    broker: test.mosquitto.org
     port: 1883
-    username: mcrowther
-    password: Radeon12300
     fallback: KEYDB
   - plugin: KEYDB
     host: localhost
