--- a/leaf/metadata_manager/equipment_actions.yaml
+++ b/leaf/metadata_manager/equipment_actions.yaml
@@ -1,5 +1,6 @@
 details: <institute>/<equipment_id>/<instance_id>/details
 running: <institute>/<equipment_id>/<instance_id>/running
+error: <institute>/<equipment_id>/<instance_id>/error
 experiment:
   start: <institute>/<equipment_id>/<instance_id>/experiment/start
   stop: <institute>/<equipment_id>/<instance_id>/experiment/stop
