--- a/config.yaml
+++ b/config.yaml
@@ -29,7 +29,7 @@ EQUIPMENT_INSTANCES:
 
 OUTPUTS:
   - plugin: MQTT
-    broker: test.mosquitto.org
+    broker: localhost
     port: 1883
     fallback: KEYDB
   - plugin: KEYDB
