--- a/tests/test_config.yaml
+++ b/tests/test_config.yaml
@@ -26,7 +26,7 @@ EQUIPMENT_INSTANCES:
 
 OUTPUTS:
   - plugin: MQTT
-    broker: test.mosquitto.org
+    broker: localhost
     port: 1883
     fallback: KEYDB
 
