--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ test:
   stage: test
   image: registry.gitlab.com/labequipmentadapterframework/leaf:runner
   before_script:
+    - apt-get update && apt-get install -y git
     - git submodule sync
     - git submodule update --init --recursive
     - mosquitto -d
