--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,15 +26,23 @@ poetry = "~1.8.3"
 watchdog = "~2.1.6"
 pandas = "~2.2.3"
 dateparser = "~1.2.0"
+leaf-register = {git = "https://gitlab.com/LabEquipmentAdapterFramework/leaf-register.git"}
 
 
 [tool.poetry.scripts]
 leaf = "leaf.start:main"
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.group.test.dependencies]
 pytest-xdist = "^3.6.1"
 pytest = "^8.3.4"
 coverage = "^7.6.8"
+leaf-hello-world = {git = "https://gitlab.com/LabEquipmentAdapterFramework/leaf-adapters/leaf-hello-world.git"}
+
+
+[[tool.poetry.source]]
+name = "gitlab"
+url = "https://gitlab.com"
+priority = "primary"
 
 [build-system]
 requires = ["poetry-core"]
