--- a/tests/test_config.yaml
+++ b/tests/test_config.yaml
@@ -29,6 +29,8 @@ OUTPUTS:
     broker: localhost
     port: 1883
     fallback: KEYDB
+    username: mcrowther
+    password: Radeon12300
 
   - plugin: KEYDB
     host: localhost
