--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,5 +8,12 @@ ADD start.sh /app/start.sh
 RUN pip install --upgrade pip && \
     pip install git+https://gitlab.com/LabEquipmentAdapterFramework/leaf.git@dev
 
+# Install all adapters
+RUN pip install git+https://gitlab.com/LabEquipmentAdapterFramework/leaf-adapters/leaf-hello-world
+RUN pip install git+https://gitlab.com/LabEquipmentAdapterFramework/leaf-adapters/leaf-irods
+RUN pip install git+https://gitlab.com/LabEquipmentAdapterFramework/leaf-adapters/leaf-minknow
+RUN pip install git+https://gitlab.com/LabEquipmentAdapterFramework/leaf-adapters/leaf-maq
+
+
 # Start the application
 ENTRYPOINT ["bash", "/app/start.sh"]
