--- a/cloud/telegraf/telegraf.conf
+++ b/cloud/telegraf/telegraf.conf
@@ -122,48 +122,6 @@
   ## this setting to true will skip the second run of processors.
   # skip_processors_after_aggregators = false
 
-
-# Send telegraf metrics to file(s)
-# [[outputs.file]]
-  ## Files to write to, "stdout" is a specially handled file.
-  # files = ["stdout", "/tmp/metrics.out"]
-
-  ## Use batch serialization format instead of line based delimiting.  The
-  ## batch format allows for the production of non line based output formats and
-  ## may more efficiently encode and write metrics.
-  # use_batch_format = false
-
-  ## The file will be rotated after the time interval specified.  When set
-  ## to 0 no time based rotation is performed.
-  # rotation_interval = "0h"
-
-  ## The logfile will be rotated when it becomes larger than the specified
-  ## size.  When set to 0 no size based rotation is performed.
-  # rotation_max_size = "0MB"
-
-  ## Maximum number of rotated archives to keep, any older logs are deleted.
-  ## If set to -1, no archives are removed.
-  # rotation_max_archives = 5
-
-  ## Data format to output.
-  ## Each data format has its own unique set of configuration options, read
-  ## more about them here:
-  ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_OUTPUT.md
-  # data_format = "json"
-
-  ## Compress output data with the specified algorithm.
-  ## If empty, compression will be disabled and files will be plain text.
-  ## Supported algorithms are "zstd", "gzip" and "zlib".
-  # compression_algorithm = ""
-
-  ## Compression level for the algorithm above.
-  ## Please note that different algorithms support different levels:
-  ##   zstd  -- supports levels 1, 3, 7 and 11.
-  ##   gzip -- supports levels 0, 1 and 9.
-  ##   zlib -- supports levels 0, 1, and 9.
-  ## By default the default compression level for each algorithm is used.
-  # compression_level = -1
-
 # Publishes metrics to a postgresql database
 [[outputs.postgresql]]
   ## Specify connection address via the standard libpq connection string:
@@ -183,7 +141,7 @@
   ##   pool_max_conn_lifetime (default: 0s) - Maximum age of a connection before closing.
   ##   pool_max_conn_idle_time (default: 0s) - Maximum idle time of a connection before closing.
   ##   pool_health_check_period (default: 0s) - Duration between health checks on idle connections.
-  connection = "postgres://postgres:${PGPASSWORD}@timescaledb:5432/${PGDATABASE}?sslmode=disable"
+  connection = "postgres://postgres:${PGPASSWORD}@${PGHOST}:${PGPORT}/${PGDATABASE}?sslmode=disable"
 
   ## Postgres schema to use.
   schema = "public"
@@ -192,7 +150,7 @@
   tags_as_foreign_keys = false
 
   ## Suffix to append to table name (measurement name) for the foreign tag table.
-  tag_table_suffix = "_tag"
+  tag_table_suffix = ""
 
   ## Deny inserting metrics if the foreign tag can't be inserted.
   foreign_tag_constraint = false
@@ -263,18 +221,18 @@
   ##   example: servers = ["tcp://localhost:1883"]
   ##            servers = ["ssl://localhost:1883"]
   ##            servers = ["ws://localhost:1883"]
-  servers = ["vernemq:1883/mqtt"]
+  servers = ["${MQTT_HOST}:1883/mqtt"]
 
   ## Topics that will be subscribed to.
   topics = [
     # "telegraf/host01/cpu",
     # "telegraf/+/mem",
-    "unlock/publish",
+    "leaf/publish",
   ]
 
   ## The message topic will be stored in a tag specified by this value.  If set
   ## to the empty string no topic tag will be created.
-  topic_tag = ""
+  topic_tag = "topic"
 
   ## QoS policy for messages
   ##   0 = at most once
@@ -344,12 +302,12 @@
   json_strict = true
   json_time_key = "timestamp"
   json_time_format = "unix"
-  json_name_key = "name"
+  json_name_key = "measurement"
   tag_keys = [
     "tags*",
   ]
   # This is to set a prefix for a table
-  name_prefix = ""
+  name_prefix = "leaf_"
   ## Enable extracting tag values from MQTT topics
   ## _ denotes an ignored entry in the topic path,
   ## # denotes a variable length path element (can only be used once per setting)
