--- a/tests/test_config_secret.yaml
+++ b/tests/test_config_secret.yaml
@@ -4,7 +4,7 @@ OUTPUTS:
     port: 1883
     fallback: KEYDB
     username: mcrowther
-    password: "{MQTT_PASSWORD}"
+    password: $MQTT_PASSWORD
 
   - plugin: KEYDB
     host: localhost
