--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ influxobject = "~0.0.1"
 pyyaml = "~6.0.2"
 watchdog = "~2.1.6"
 dateparser = "~1.2.0"
+requests = "~2.32.3"
 leaf-register = {git = "https://gitlab.com/LabEquipmentAdapterFramework/leaf-register.git"}
 
 
