--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pyyaml = "~6.0.2"
 watchdog = "~2.1.6"
 dateparser = "~1.2.0"
 requests = "~2.32.3"
+nicegui = "~2.12.1"
 leaf-register = {git = "https://gitlab.com/LabEquipmentAdapterFramework/leaf-register.git"}
 
 
