mock functional adapters code removed moved to its own git repo and added as a dependency in pyproject.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ pytest = "^8.3.4"
 coverage = "^7.6.8"
 mypy = "^1.14.1"
 leaf-hello-world = {git = "https://gitlab.com/LabEquipmentAdapterFramework/leaf-adapters/leaf-hello-world.git"}
-
+leaf-mock-functional-adapter = {git = "https://gitlab.com/LabEquipmentAdapterFramework/leaf-adapters/leaf-mockfunctionaladapter.git"}
 
 [tool.poetry.group.dev.dependencies]
 bump2version = "^1.0.1"
