--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ watchdog = "~2.1.6"
 dateparser = "~1.2.0"
 requests = "~2.32.3"
 leaf-register = "~0.1.1"
-
+httpx = "~0.28.1"
+nicegui = "~2.17.0"
 
 [tool.poetry.scripts]
 leaf = "leaf.start:main"
@@ -38,7 +39,7 @@ pytest-xdist = "^3.6.1"
 pytest = "^8.3.4"
 coverage = "^7.6.8"
 mypy = "^1.14.1"
-leaf-hello-world = {git = "https://gitlab.com/LabEquipmentAdapterFramework/leaf-adapters/leaf-hello-world.git"}
+#leaf-hello-world = {git = "https://gitlab.com/LabEquipmentAdapterFramework/leaf-adapters/leaf-hello-world.git"}
 
 [tool.poetry.group.dev.dependencies]
 bump2version = "^1.0.1"
