--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,10 +31,10 @@ publish:
   stage: publish
   image: python:3.12
   before_script:
-    - pip install poetry
-    - poetry config pypi-token.pypi "$PYPI_TOKEN"
-    - poetry build
+    - echo pip install poetry
+    - echo poetry config pypi-token.pypi "$PYPI_TOKEN"
+    - echo poetry build
   script:
-    - poetry publish
+    - echo poetry publish
   only:
     - dev  # restrict to dev branch
