Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,12 +31,14 @@ publish:
   stage: publish
   image: python:3.12
   before_script:
-    - echo "PYPI_TOKEN length: ${#PYPI_TOKEN}"
-    # - pip install poetry
+    - pip install poetry
+    - echo "Some token... ${PYPI_TOKEN}"
     # - poetry config pypi-token.pypi "$PYPI_TOKEN"
     # - poetry config --list | grep pypi-token
     # - poetry build
   script:
-    - echo "publishing..." # poetry publish
+    - echo "publishing..." 
+    # poetry publish
   only:
     - dev  # restrict to dev branch
+
